# ghpr

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  ghpr.py  pyproject.toml
.github/workflows/: build-and-test.yml
src/ghpr/: __init__.py  __main__.py  gh.py  git.py  logging.py
tests/: __init__.py  conftest.py  test_gh.py  test_git.py  test_main.py
tools/: make_release.sh
