[project]
name = "ghpr"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-2-Clause"}
keywords = ["git", "github"]
authors = [
    {name = "Warner Losh", email = "imp@FreeBSD.org"}
]
maintainers = [
    {name = "Warner Losh", email = "imp@FreeBSD.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "click>=8.1",
    "GitPython>=3.1.44",
]

[project.optional-dependencies]
coverage = [
    "coverage~=7.0",
    "pytest-cov>=5.0.0"
]
test = [
    "pytest~=8.0.0",
    "pytest-timeout~=2.0.0"
]

[project.scripts]
ghpr = "ghpr.__main__:cli"

[project.urls]
"Homepage" = "https://github.com/bsdimp/ghpr"
"Bug Reports" = "https://github.com/bsdimp/ghpr/issues"
"Source" = "https://github.com/bsdimp/ghpr"

[tool.setuptools.dynamic]
version = {"attr" = "ghpr.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.report]
# TODO: raise the coverage bar to ~80%.
fail_under = 60

[tool.coverage.run]
branch = true
source = ["src/"]

[tool.pytest.ini_options]
timeout = 10

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    "build",
    "dist"
]
lint.select = [
    "ANN",
    "B",
    "D",
    "E",
    "F",
    "I",
    "PERF",
    "PLW",
    "PYI",
    "RUF",
    "S",
    "W"
]
lint.ignore = [
    "D107",  # Document __init__ nags.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S"
]

[tool.setuptools]
package-dir = {"" = "src/"}

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list =
    coverage
    py310
    py311
    py312
    py313
    py314

[testenv]
extras =
    test
commands =
    {envpython} -m pytest {posargs:-v tests}

[testenv:coverage]
extras =
    coverage
    test
commands =
    {envpython} -m pytest --cov=ghpr --cov-report=term --cov-report=html \
        {posargs:-vv tests}

[testenv:type]
deps =
    mypy
commands =
    {envpython} -m mypy {posargs:src}
"""
